<resources>
    <string name="app_name">Slash</string>

    <string name="homeScreenEmailInput">E-Mail or Username</string>
    <string name="homeScreenPasswordInput">Password</string>
    <string name="homeScreenLoginButton">Login</string>
    <string name="homeScreenRegisterLink">New on Slash? Please register!</string>
    <string name="homeScreenForgotPassword"><u> Forgot Password </u></string>
    <string name="homeScreenIncorrectEmailMessage">Please insert a valid E-mail address</string>
    <string name="homeScreenIncorrectPasswordMessage">Please insert a valid Password with a minimum length of 8</string>
    <string name="homeScreenUserDoesNotExist">This user does not exist!</string>
    <string name="homeScreenWrongPassword">This Password does not match!</string>
    <string name="homeScreenUserAlreadyLoggedIn">This user is already logged in!</string>

    <string name="registerScreenHeadline">Registration</string>
    <string name="registerScreenEmailInput">E-Mail</string>
    <string name="registerScreenUsernameInput">Username</string>
    <string name="registerScreenPasswordInput">Password (at least 8 characters)</string>
    <string name="registerScreenConfirmPasswordInput">Confirm Password</string>
    <string name="registerScreenRegisterButton">Register</string>
    <string name="registerScreenEmptyUsernameMessage">Please insert a valid E-mail address and an username</string>
    <string name="registerScreenEmptyPasswordMessage">Please insert a valid password</string>
    <string name="registerScreenNoMatchPasswordMessage">Inserted passwords does not match</string>
    <string name="registerScreenUnsafePasswordMessage">The inserted password does not correspond to the guidelines</string>
    <string name="registerScreenUsernameAlreadyRegisteredMessage">The inserted username is already taken by another user</string>
    <string name="registerScreenEmailAlreadyRegisteredMessage">The inserted e-mail is already taken by another user</string>
    <string name="registerScreenSuccessMessage">The registration was successfully completed</string>

    <string name="homeScreenProjectsHeadline">Projects</string>
    <string name="homeScreenLastMessageHeadline">Latest Messages</string>

    <string name="chatScreen">Chat</string>
    <string name="createChatUsername">Username</string>
    <string name="activity_chat_screen_template">Template</string>
    <string name="activity_chat_screen_meme_generator">Meme</string>
    <string name="activity_chat_screen_image">Image</string>
    <string name="activity_chat_screen_select_image">Select Image</string>

    <string name="new_project">New Project</string>
    <string name="project_name">Project Name</string>
    <string name="description">Description</string>
    <string name="ButtonNext">Create Project</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_add_people">Add People</string>
    <string name="home">Slash</string>
    <string name="no_matches_found">No matches found</string>
    <string name="add_people">Add People</string>
    <string name="subject_required">Subject is required</string>
    <string name="message_required">Message is required</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="category">Category</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="project_details">Project Details</string>
    <string name="project_members">Project Members</string>
    <string name="memeGeneratorUpperMessage">Upper Message</string>
    <string name="memeGeneratorBottomMessage">Bottom Message</string>
    <string name="memeGeneratorButton">Generate Meme</string>
    <string name="error_socket_not_connected">Web Socket not connected. Please check your internet connection.</string>
    <string name="contentDesc_attach">Attach something</string>
    <string name="contentDesc_send">Send message</string>
    <string name="contentDesc_logo">App logo</string>
    <string name="contentDes_meme_preview">Meme Preview</string>
    <string name="contentDes_meme_template">Meme Template</string>
    <string name="custom_image">Custom Image</string>
    <string name="role_scrum_master">Scrum Master</string>
    <string name="search">Search</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>
    <string name="context_send_message">Send Message</string>
    <string name="context_make_scrum_master">Make Scrum Master</string>
    <string name="toolbar_info">Info</string>
    <string name="element_sentiment">Current sentiment</string>
    <string name="chat_message_hint">Enter your message</string>
    <string name="context_remove_from_project">Remove from Project</string>
    <string name="context_leave_project">Leave Project</string>
    <string name="context_unmake_scrum_master">Make Developer</string>
    <string name="chat_unknown_user">Unknown User</string>
</resources>
