<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activties.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/wholeWindow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/homeScreenEmailInput"
                    style="@style/LoginRegisterScreenInputElement"
                    android:layout_marginTop="75dp"
                    android:ems="10"
                    android:hint="@string/homeScreenEmailInput"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/homeScreenWrongEmailTextView"
                    style="@style/LoginRegisterScreenErrorMessageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/homeScreenPasswordInput"
                    style="@style/LoginRegisterScreenInputElement"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:hint="@string/homeScreenPasswordInput"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/homeScreenWrongPasswordTextView"
                    style="@style/LoginRegisterScreenErrorMessageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/homeScreenRegisterLink"
                    style="@style/LoginRegisterScreenInteractionElement"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/homeScreenRegisterLink"
                    android:textColor="#ff8800"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/homeScreenLoginButton"
                    style="@style/LoginRegisterScreenInteractionElement"
                    android:layout_height="75dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/homeScreenLoginButton" />

                <TextView
                    android:id="@+id/homeScreenForgotPasswordLink"
                    style="@style/LoginRegisterScreenInteractionElement"
                    android:layout_width="150dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/homeScreenForgotPassword"
                    android:textColor="#ff8800" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loadingScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#CCffffff"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>



</android.support.constraint.ConstraintLayout>