<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activties.MemeGenerationActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/memeGeneratorImageView"
                android:layout_width="350dp"
                android:layout_height="350dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memeGeneratorUpperMessage" />

            <EditText
                android:id="@+id/memeGeneratorEditTextUpperMessage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/memeGeneratorBottomMessage" />

            <EditText
                android:id="@+id/memeGeneratorEditTextBottomMessage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text" />

            <Button
                android:id="@+id/memeGeneratorButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/memeGeneratorButton" />

        </LinearLayout>

        <TextView
            android:id="@+id/memeGeneratorTextViewUpperMessage"
            android:gravity="center"
            android:layout_marginTop="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:textColor="@color/colorMemes"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1" />

        <TextView
            android:id="@+id/memeGeneratorTextViewBottomMessage"
            android:gravity="center"
            android:layout_marginTop="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:textColor="@color/colorMemes"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>